--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -27,6 +27,8 @@ android.enableJetifier=true
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.75.1
 
+org.gradle.jvmargs=-Xms1024m -Xmx4096m
+
 MYAPP_RELEASE_STORE_FILE=my-key.keystore
 MYAPP_RELEASE_KEY_ALIAS=my-key-alias
 MYAPP_RELEASE_STORE_PASSWORD=12345678
